deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clicknvape-backend-dev
  labels:
    app: clicknvape-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clicknvape-backend
  template:
    metadata:
      labels:
        app: clicknvape-backend
    spec:
      containers:
        - name: backend
          image: registry.meko.ac/vapostore_uber-mobil_backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: nexus-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: clicknvape-backend
spec:
  type: ClusterIP 
  selector:
    app: clicknvape-backend
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 31000
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.staging.clicknvape.fr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
    acme.cert-manager.io/http01-edit-in-place: "true"
    
    # ✅ Spécifique WebSocket
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
spec:
  tls:
    - hosts:
        - api.staging.clicknvape.fr
      secretName: "api.staging.clicknvape.fr-tls-acme"
  rules:
    - host: api.staging.clicknvape.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clicknvape-backend
                port:
                  number: 3000
